--- a/style.css
+++ b/style.css
@@ -213,6 +213,16 @@ body {
     justify-content: center;
     align-items: center;
     gap: 40px;
-    background-color: black;
+    background-color: var(--color);
     height: 300px;
+}
+.icon{
+    text-decoration: none;
+    color: white;
+    margin-right: 50px;
+    margin-left: 50px;
+    padding: 30px;
+    font-size: 40px;
+    border: 4px solid white;
+    border-radius: 50%;
 }
